--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <title>My First PyScript</title>
   <link rel="stylesheet" href="https://pyscript.net/latest/pyscript.css" />
+  <link rel="stylesheet" href="./assets/css/examples.css" />
   <script defer src="https://pyscript.net/latest/pyscript.js"></script>
 </head>
 <body>
@@ -12,6 +13,10 @@
   <py-script>
     print("こんにちは、PyScriptの世界へ！")
   </py-script>
-
+        <section class="pyscript">
+            <div id="altair"></div>
+            <script type="py" src="./main.py"></script>
+        </section>
 </body>
 </html>
+
