--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <h1>Hello from PyScript</h1>
 
   <py-script>
-    print("こんにちは、PyScriptの世界へ！")
+    print("welcome to my first pyscript homepage！")
   </py-script>
         <section class="pyscript">
             <div id="altair"></div>
@@ -19,4 +19,5 @@
         </section>
 </body>
 </html>
+
 
