--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
   </py-script>
 
             <div id="altair"></div>
-            <script type="py" src="main.py"></script>
+            <script type="py" src="./main.py" defer></script>
 
 </body>
 </html>
+
 
 
 
