--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <h1>Hello from PyScript</h1>
 
   <py-script>
-    print("welcome to my first pyscript homepage！")
+    print("welcome!")
   </py-script>
 
             <div id="altair"></div>
@@ -19,6 +19,7 @@
 
 </body>
 </html>
+
 
 
 
