--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
   <title>My First PyScript</title>
   <link rel="stylesheet" href="https://pyscript.net/latest/pyscript.css" />
   <link rel="stylesheet" href="./assets/css/examples.css" />
-  <script defer src="https://pyscript.net/latest/pyscript.js"></script>
+  <script defer src="https://pyscript.net/latest/pyscript.js"></script>            
+  <script src="./main.py" defer></script>
 </head>
 <body>
 
@@ -16,10 +17,11 @@
 <br/>
 <br/>
             <div id="altair"></div>
-            <script type="py" src="./main.py" defer></script>
+
 
 </body>
 </html>
+
 
 
 
