--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <h1>Hello from PyScript</h1>
 
   <py-script>
-    print("welcome!")
+    print("欢迎光临!")
   </py-script>
 <br/>
 <br/>
@@ -21,6 +21,7 @@
 
 </body>
 </html>
+
 
 
 
