--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <link rel="stylesheet" href="https://pyscript.net/latest/pyscript.css" />
   <link rel="stylesheet" href="./assets/css/examples.css" />
   <script defer src="https://pyscript.net/latest/pyscript.js"></script>            
-  <script src="./main.py" defer></script>
+  <script type="py" src="./main.py" defer></script>
 </head>
 <body>
 
@@ -21,6 +21,7 @@
 
 </body>
 </html>
+
 
 
 
