--- a/index.html
+++ b/index.html
@@ -4,16 +4,14 @@
   <title>My First PyScript</title>
   <link rel="stylesheet" href="https://pyscript.net/latest/pyscript.css" />
   <link rel="stylesheet" href="./assets/css/examples.css" />
-  <script defer src="https://pyscript.net/latest/pyscript.js"></script>            
+  <script defer src="https://pyscript.net/latest/pyscript.js"></script>
   <script type="py" src="./main.py" defer></script>
 </head>
 <body>
-
-  <h1>Hello my friend,welcome to here</h1>
-
-
-</body>
+  <h1>Hello!</h1>
+  <div id="my-plot"></div>  </body>
 </html>
+
 
 
 
