--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
   <title>My First PyScript</title>
   <link rel="stylesheet" href="https://pyscript.net/latest/pyscript.css" />
-  <link rel="stylesheet" href="./assets/css/examples.css" />
   <script defer src="https://pyscript.net/latest/pyscript.js"></script>
   <script type="py" src="./main.py" defer></script>
 </head>
 <body>
-  <h1>Hello!</h1>
-  <div id="my-plot"></div>  </body>
+  <h1>Hello from PyScript</h1>
+  <div id="output"></div> </body>
 </html>
+
 
 
 
