--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
   <script type="py" src="./main.py" defer></script>
 </head>
 <body>
-  <h1>Hello from PyScript</h1>
+  <h1>this is  title in html</h1>
   <div id="output"></div> </body>
 </html>
+
 
 
 
