--- a/index.html
+++ b/index.html
@@ -4,12 +4,17 @@
   <title>My First PyScript</title>
   <link rel="stylesheet" href="https://pyscript.net/latest/pyscript.css" />
   <script defer src="https://pyscript.net/latest/pyscript.js"></script>
-  <script type="py" src="./main.py" defer></script>
 </head>
 <body>
   <h1>this is  title in html</h1>
-  <div id="output"></div> </body>
+  <div id="output"></div>
+
+  <!-- 正确的写法 -->
+  <py-script src="main.py"></py-script>
+</body>
 </html>
+
+
 
 
 
