--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
   <div id="output"></div>
 
   <!-- 正确的写法 -->
-  <py-script src="./main.py"></py-script>
+  <py-script src="main.py"></py-script>
 </body>
 </html>
+
 
 
 
