--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>My First PyScript</title>
   <link rel="stylesheet" href="https://pyscript.net/latest/pyscript.css" />
-  <script defer src="https://pyscript.net/latest/pyscript.js"></script>
+  <script src="https://pyscript.net/latest/pyscript.js"></script>
 </head>
 <body>
   <h1>this is  title in html</h1>
@@ -13,6 +13,7 @@
   <py-script src="main.py"></py-script>
 </body>
 </html>
+
 
 
 
