--- a/index.html
+++ b/index.html
@@ -2,19 +2,26 @@
 <html>
 <head>
   <title>PyScript Test</title>
-  <link rel="stylesheet" href="https://pyscript.net/latest/pyscript.css" />
-  <script defer src="https://pyscript.net/latest/pyscript.js"></script>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width,initial-scale=1.0">
+
+        <!-- PyScript CSS -->
+        <link rel="stylesheet" href="https://pyscript.net/releases/2024.1.1/core.css">
+        <!-- CSS for examples -->
+        <link rel="stylesheet" href="./assets/css/examples.css" />
+
+        <!-- This script tag bootstraps PyScript -->
+        <script type="module" src="https://pyscript.net/releases/2024.1.1/core.js"></script>
+
 </head>
 <body>
-  <h1>Test HTML + Python</h1>
-  <div id="output"></div>
 
-  <py-script>
-import main
-main.run()
-  </py-script>
+          <section class="pyscript">
+            <script type="py" src="./main.py" config="./pyscript.toml"></script>
+        </section>
 </body>
 </html>
+
 
 
 
